[package]
name = "hostbridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "hostbridge"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "hostbridge_bin"
path = "src/main.rs"

[dependencies]
once_cell = "1.9.0"
libc = "0.2.2"
wry = { version = "0.13.1", default-features = false, features = ["tray"] }
notify-rust = "4.5.6"
rfd = "0.8.0"

[target.'cfg(windows)'.dependencies]
ico = "0.1.0"